# VeilVote

./: .gitignore  readme.md  run.txt
circuits/: package-lock.json  readme.md  testCircuit.js  vote.circom
circuits/groth16_verifier/: Cargo.toml
circuits/groth16_verifier/src/: lib.rs
contracts/: readme.md
contracts/private_voting/: Cargo.toml  SUMMARY.md
contracts/private_voting/src/: babyjubjub.rs  dkg.rs  lib.rs  tally.rs  types.rs  verifier.rs  voting.rs
contracts/tests/: generateKeys.js  initContract.js  package-lock.json  package.json  privatevotingTest.js
frontend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/circuits/: vote.wasm
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Navigation.jsx  ProposalCard.jsx  ProposalStatusTimeline.jsx  VoteForm.jsx
frontend/src/context/: VotingContext.jsx
frontend/src/pages/: ArchiveProposals.jsx  Dashboard.jsx  Decryption.jsx  Keyholder.jsx  ProposalCreate.jsx  ProposalDetail.jsx  ProposalList.jsx
frontend/src/utils/: contractUtils.js
